--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,7 @@
 @import './components/buttons';
 @import './components/footer';
 @import './components/home';
+@import './components/about';
 @import './components/pages';
 @import './components/blog';
 
