--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -161,3 +161,26 @@
     height: 54px;
   }
 }
+
+/* ********************************************************** */
+/* AboutMotivationSentence */
+/* ********************************************************** */
+
+.about_motivation {
+  padding: var(--space-24) var(--layout-page-padding-x);
+}
+
+.about_motivation__text {
+  max-width: 50ch;
+  margin: 0 auto;
+  text-align: center;
+  font-family: var(--font-heading);
+  font-size: var(--fontSizeH2);
+  line-height: 1.3;
+  color: var(--color-text);
+  padding: var(--space-20);
+}
+
+/* ********************************************************** */
+/* AboutMotivationSentence */
+/* ********************************************************** */
