chore(styles): migrate sass imports to use  Changes to be committed: 	modified:   src/styles/globals.scss

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,16 +1,15 @@
 /* src/styles/globals.scss */
 
-@import './tokens';
-@import './components/layout';
-@import './components/buttons';
-@import './components/footer';
-@import './components/home';
-@import './components/about';
-@import './components/pages';
-@import './components/blog';
+@use './tokens';
+@use './components/layout';
+@use './components/buttons';
+@use './components/footer';
+@use './components/home';
+@use './components/about';
+@use './components/pages';
+@use './components/blog';
 
 /* Reset simples */
-
 *,
 *::before,
 *::after {
