chore(styles): small changes in background color  Changes to be committed: 	modified:   src/app/blog/page.tsx 	modified:   src/styles/components/_blog.scss 	modified:   src/styles/components/_home.scss

--- a/src/styles/components/_blog.scss
+++ b/src/styles/components/_blog.scss
@@ -118,7 +118,7 @@
 }
 
 .blog_page__container {
-  padding: var(--space-48) var(--layout-page-padding-x);
+  padding: var(--space-64) 0;
 }
 
 /* ********************************************************** */
