--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -496,7 +496,7 @@
 
 .home-newsletter {
   position: relative;
-  background-color: var(--color-primary);
+  background: var(--colorPrimary);
   color: #ffffff;
   padding: 4rem var(--layout-page-padding-x) 5rem;
   overflow: hidden;
