--- a/src/styles/components/_blog.scss
+++ b/src/styles/components/_blog.scss
@@ -330,6 +330,10 @@
 .blog_page__container {
   display: grid;
   gap: var(--space-64);
+
+  @media (max-width: 1200px) {
+    padding: var(--space-64) var(--space-24);
+  }
 }
 
 /* ********************************************************** */
@@ -508,7 +512,7 @@
 
 .blog_latest__side {
   display: grid;
-  gap: var(--space-12);
+  gap: var(--space-48);
   min-width: 0;
 }
 
