--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -41,6 +41,7 @@
   --space-40: 40px;
   --space-48: 48px;
   --space-64: 64px;
+  --space-72: 72px;
 
   /* Alias antigos para compatibilidade */
   --spaceXs: var(--space-4);
